<?xml version="1.0" encoding="utf-8"?>


<ScrollView android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="vertical" android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingTop="15dp"
        android:paddingBottom="15dp"
        android:paddingLeft="15dp"
        android:paddingRight="15dp">



        <TextView
            android:text="@string/title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/textView11" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:id="@+id/editTextTitle"
            android:inputType="text"
            android:textSize="16sp" />

        <TextView
            android:text="@string/author"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/textView12" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:id="@+id/editTextAuthor"
            android:inputType="text"
            android:textSize="16sp" />

        <TextView
            android:text="@string/quantity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/textView13" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:id="@+id/editTextYear"
            android:inputType="number"
            android:maxLength="4"
            android:textSize="16sp" />

        <TextView
            android:text="@string/shelf_number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/textView14" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:ems="10"
            android:id="@+id/editTextPublisher"
            android:textSize="16sp" />

        <TextView
            android:text="Category"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/textView15" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:ems="10"
            android:id="@+id/editTextCategory"
            android:textSize="16sp" />

        <TextView
            android:text="@string/personal_assessment"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/textView18" />

        <RatingBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/ratingBar"
            android:layout_gravity="center_horizontal"
            android:numStars="5"
            android:stepSize="1"
            android:isIndicator="false"
            android:rating="1"
            style="@android:style/Widget.DeviceDefault.RatingBar.Indicator" />

        <TextView
            android:textAlignment="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/textViewRating" />

    </LinearLayout>

</ScrollView>
